<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@drawable/bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingHorizontal="20dp"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context=".activity.SubmitActivity">

    <RelativeLayout
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:background="@null">

            <RelativeLayout
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageButton
                    android:layout_width="30dp"
                    android:padding="5dp"
                    android:layout_height="30dp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:background="@drawable/back"
                    android:id="@+id/back"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical" />

                <ImageView
                    android:textColor="@color/solid_black"
                    android:textAllCaps="false"
                    android:src="@drawable/header"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:paddingVertical="7dp"
                android:textSize="16dp"
                android:text="@string/project_submission"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <View
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="2dp"
           android:layout_marginHorizontal="40px"
            android:background="@drawable/bg_gradient"
            android:layout_below="@+id/header"/>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/view_pager"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="80dp"
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:id="@+id/firstname"
                        android:background="@drawable/edittext_bg"
                        android:hint="@string/firstname"
                        android:paddingHorizontal="15dp"
                        android:layout_marginRight="3dp"
                        android:layout_height="45dp"/>
                    <EditText
                        android:layout_width="0dp"
                        android:hint="@string/lastname"
                        android:id="@+id/lastname"
                        android:paddingHorizontal="15dp"
                        android:background="@drawable/edittext_bg"
                        android:layout_marginLeft="3dp"
                        android:layout_weight="1"
                        android:layout_height="45dp"/>

                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:background="@drawable/edittext_bg"
                    android:id="@+id/email"
                    android:layout_marginTop="50dp"
                    android:paddingHorizontal="15dp"
                    android:hint="@string/email_address"
                    android:layout_height="45dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/link"
                    android:layout_marginTop="50dp"
                    android:paddingHorizontal="15dp"
                    android:background="@drawable/edittext_bg"
                    android:hint="@string/project_on_git"
                    android:layout_height="45dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/submit"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textSize="17px"
                    android:paddingHorizontal="35dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@drawable/submit"
                    android:layout_marginTop="50dp"
                    android:layout_height="30dp"/>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>